src/objects/Courses__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Summer school courses associated with a campus/session.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the course be available in the picklist of courses.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus_Session__c</fullName>
        <description>The product code of the campus/session product where the course is offered.</description>
        <label>Campus/Session</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <description>Equivalent to Product Description in old system.</description>
        <label>Course Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course name, without reference to the campus.  Equivalent to Product Name in previous system. This does not need to be unique.</description>
        <label>Course Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Courses</label>
</CustomObject>